cleanup and bug fixes.